# MFTS-Cleanup

./: .gitignore  .template.env  README.md  sample_config.yaml  setup.cfg
src/: __main__.py
src/cleanup/: file_move.py  first_email.txt  send_email.py  ssh.py  three_weeks.txt
src/mftscleanup/: __init__.py  __main__.py  business_days.py  cleanup.py  config.yaml  email.py  file_move.py  first_email.txt  metadata_store.py  send_email.py  share.py  state.py  three_weeks.txt
tests/: conftest.py  helpers.py  test_auto_cleanup_shares.py  test_business_days.py  test_get_deletion_date.py  test_metadata_store.py  test_register.py  test_register_new_share.py  test_state.py
