# Anytime you change anything in this file, you should at least re-run:
# `pip install -e .`

[metadata]
# The distribution name (pip):
name = mftscleanup
version = 0.0.0+dev
author = Sarah Ponce
author_email = sarah.ponce@bcm.edu
description = mftscleanup package. Runnable with entry point and importable.
long_description = file:README.md
url = https://github.com/BCM-HGSC
license = MIT
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
# The package names (import):
python_requires = >=3.10
# You don't need package_dir if your packeges are at the top.
package_dir =
    =src
packages = find:
# Demonstration dependency

install_requires =
    addict
    holidays '!=0.17' # holidays requires any version that is not 0.17 due to a bug
    pyyaml
    
# You don't this if your packeges are at the top.
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    auto-cleanup-shares = mftscleanup.__main__:auto_cleanup
    register-new-share = mftscleanup.__main__:register_share

[options.extras_require]
# pip install -e ".[dev]"
dev = 
    black
    pylint
    pytest

[bdist_wheel]
universal = 1
